--- a/app/views/user/account/seller-1.html
+++ b/app/views/user/account/seller-1.html
@@ -6,7 +6,7 @@
 
 		<div class="grid-container u-margin-top-20">
 			<div class="grid-100">
-				<p class="account-title"><i class="fa fa-caret-down"></i>Mi cuenta > Mis compras</p>
+				<p class="account-title"><i class="fa fa-caret-down"></i>Pedidos Abiertos</p>
 			</div>
 		</div>
 
@@ -19,60 +19,61 @@
 				<div class="am-profile-box grid-container u-margin-top-20" style="float: right; max-width: 880px !important;">
 					<form class="complete-form">
 
-						<p class="open-seller-main-title">Pedidos abiertos</p>
+						<p class="open-seller-main-title">Envíos abiertos</p>
 
 						<p class="u-separator u-margin-bottom-20" style="background: #979797;"></p>
 
-						<div class="open-seller-item type2">
+						<div class="open-seller-item">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
 							<div class="information-left">
+								<p class="information-left-title">Los pajaritos ya no cantan como antes cantaban</p>
+								<p class="information-left-subtitle">Por Sergio Gonzales</p>
+								<p class="information-left-title">ID: # 105-4353550-5844247</p>
+								<br>
 								<p class="information-left-description">
-									PRODUCTO: <br>
-									Los Pajaritos ya no cantan como antes <br>
-									Sergio Gonzales <br>
-									ID # OO.23232.2123 <br>
-									<br>
 									VENTA DE OBRA ORIGINAL <br>
-									Obra original empacada en caja <br>
-									<br>
-									FECHA PEDIDO: <br>
-									13/05/2016
+									Obra original empacada en caja
+									<br><br>
+									ORIGEN: <br>
+									Miraflores, LIma, Perú
 								</p>
 							</div>
 							<div class="information-center">
-								MEDIDAS DEL PAQUETE <br>
-								2.5 kg / 50 cm x 40 cm x 10 cm <br>
+								<p>
+									CANTIDAD: <br>
+									X 1
+								</p>
+								<br><br>
+								<p>
+									MEDIDAS DEL PAQUETE <br>
+									2.5 kg / 50 cm x 40 cm x 10 cm
+									<br><br>
+									DESTINO: <br>
+									Chiclayo, Chiclayo, Perú
+								</p>
 								<br>
-								Pagado con <strong>Paypal</strong> <br>
-								<br>
-								ORIGEN: <br>
-								Miraflores, LIma, Perú <br>
-								<br>
-								DESTINO: <br>
-								Chiclayo, Chiclayo, Perú
+								<p> <a href="#">Ficha de envío</a> </p>
 							</div>
 							<div class="information-right">
-								<p>RESUMEN DE LA ORDEN</p>
-								<div class="table type2">
+								<div class="table">
 									<div class="left">
-										<p>tu ganancia:</p>
+										<p class="green">tu ganancia:</p>
 										<p>comisión am</p>
-										<p>subtotal:</p>
+										<p class="bold">subtotal:</p>
 										<p>shipping:</p>
 										<p>impuestos:</p>
-										<p>total:</p>
+										<p class="bold">total:</p>
 									</div>
 									<div class="right">
-										<p>USD 70.00</p>
+										<p class="green">USD 70.00</p>
 										<p>USD 30.00</p>
-										<p>USD 100.00</p>
+										<p class="bold">USD 100.00</p>
 										<p>USD 25.00</p>
 										<p>USD 25.00</p>
-										<p>USD 150.00</p>
+										<p class="bold">USD 150.00</p>
 									</div>
 								</div>
 								<br>
-								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
 								<a href="">Detalle Invoice</a>
 							</div>
 						</div>
@@ -89,61 +90,60 @@
 
 						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
 
-						<div class="open-seller-item type2">
+						<div class="open-seller-item">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
 							<div class="information-left">
+								<p class="information-left-title">Los pajaritos ya no cantan como antes cantaban</p>
+								<p class="information-left-subtitle">Por Sergio Gonzales</p>
+								<p class="information-left-title">ID: # 105-4353550-5844247</p>
+								<br>
 								<p class="information-left-description">
-									PRODUCTO: <br>
-									Los Pajaritos ya no cantan como antes <br>
-									Sergio Gonzales <br>
-									ID # OO.23232.2123 <br>
-									<br>
 									VENTA DE OBRA ORIGINAL <br>
-									Obra original empacada en caja <br>
-									<br>
-									FECHA PEDIDO: <br>
-									13/05/2016
+									Obra original empacada en caja
+									<br><br>
+									ORIGEN: <br>
+									Miraflores, LIma, Perú
 								</p>
 							</div>
 							<div class="information-center">
-								MEDIDAS DEL PAQUETE <br>
-								2.5 kg / 50 cm x 40 cm x 10 cm <br>
+								<p>
+									CANTIDAD: <br>
+									X 1
+								</p>
+								<br><br>
+								<p>
+									MEDIDAS DEL PAQUETE <br>
+									2.5 kg / 50 cm x 40 cm x 10 cm
+									<br><br>
+									DESTINO: <br>
+									Chiclayo, Chiclayo, Perú
+								</p>
 								<br>
-								Pagado con <strong>Paypal</strong> <br>
-								<br>
-								ORIGEN: <br>
-								Miraflores, LIma, Perú <br>
-								<br>
-								DESTINO: <br>
-								Chiclayo, Chiclayo, Perú
+								<p> <a href="#">Ficha de envío</a> </p>
 							</div>
 							<div class="information-right">
-								<p>RESUMEN DE LA ORDEN</p>
-								<div class="table type2">
+								<div class="table">
 									<div class="left">
-										<p>tu ganancia:</p>
+										<p class="green">tu ganancia:</p>
 										<p>comisión am</p>
-										<p>subtotal:</p>
+										<p class="bold">subtotal:</p>
 										<p>shipping:</p>
 										<p>impuestos:</p>
-										<p>total:</p>
+										<p class="bold">total:</p>
 									</div>
 									<div class="right">
-										<p>USD 70.00</p>
+										<p class="green">USD 70.00</p>
 										<p>USD 30.00</p>
-										<p>USD 100.00</p>
+										<p class="bold">USD 100.00</p>
 										<p>USD 25.00</p>
 										<p>USD 25.00</p>
-										<p>USD 150.00</p>
+										<p class="bold">USD 150.00</p>
 									</div>
 								</div>
 								<br>
-								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
 								<a href="">Detalle Invoice</a>
 							</div>
 						</div>
-
-						<p class="open-seller-secondary-title">Acción a realizar:</p>
 
 						<div class="open-seller-box">
 							<span class="number">2</span>
@@ -154,61 +154,60 @@
 
 						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
 
-						<div class="open-seller-item type2">
+						<div class="open-seller-item">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
 							<div class="information-left">
+								<p class="information-left-title">Los pajaritos ya no cantan como antes cantaban</p>
+								<p class="information-left-subtitle">Por Sergio Gonzales</p>
+								<p class="information-left-title">ID: # 105-4353550-5844247</p>
+								<br>
 								<p class="information-left-description">
-									PRODUCTO: <br>
-									Los Pajaritos ya no cantan como antes <br>
-									Sergio Gonzales <br>
-									ID # OO.23232.2123 <br>
-									<br>
 									VENTA DE OBRA ORIGINAL <br>
-									Obra original empacada en caja <br>
-									<br>
-									FECHA PEDIDO: <br>
-									13/05/2016
+									Obra original empacada en caja
+									<br><br>
+									ORIGEN: <br>
+									Miraflores, LIma, Perú
 								</p>
 							</div>
 							<div class="information-center">
-								MEDIDAS DEL PAQUETE <br>
-								2.5 kg / 50 cm x 40 cm x 10 cm <br>
+								<p>
+									CANTIDAD: <br>
+									X 1
+								</p>
+								<br><br>
+								<p>
+									MEDIDAS DEL PAQUETE <br>
+									2.5 kg / 50 cm x 40 cm x 10 cm
+									<br><br>
+									DESTINO: <br>
+									Chiclayo, Chiclayo, Perú
+								</p>
 								<br>
-								Pagado con <strong>Paypal</strong> <br>
-								<br>
-								ORIGEN: <br>
-								Miraflores, LIma, Perú <br>
-								<br>
-								DESTINO: <br>
-								Chiclayo, Chiclayo, Perú
+								<p> <a href="#">Ficha de envío</a> </p>
 							</div>
 							<div class="information-right">
-								<p>RESUMEN DE LA ORDEN</p>
-								<div class="table type2">
+								<div class="table">
 									<div class="left">
-										<p>tu ganancia:</p>
+										<p class="green">tu ganancia:</p>
 										<p>comisión am</p>
-										<p>subtotal:</p>
+										<p class="bold">subtotal:</p>
 										<p>shipping:</p>
 										<p>impuestos:</p>
-										<p>total:</p>
+										<p class="bold">total:</p>
 									</div>
 									<div class="right">
-										<p>USD 70.00</p>
+										<p class="green">USD 70.00</p>
 										<p>USD 30.00</p>
-										<p>USD 100.00</p>
+										<p class="bold">USD 100.00</p>
 										<p>USD 25.00</p>
 										<p>USD 25.00</p>
-										<p>USD 150.00</p>
+										<p class="bold">USD 150.00</p>
 									</div>
 								</div>
 								<br>
-								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
 								<a href="">Detalle Invoice</a>
 							</div>
 						</div>
-
-						<p class="open-seller-secondary-title">Acción a realizar:</p>
 
 						<div class="open-seller-box">
 							<span class="number">3</span>
@@ -219,61 +218,60 @@
 
 						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
 
-						<div class="open-seller-item type2">
+						<div class="open-seller-item">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
 							<div class="information-left">
+								<p class="information-left-title">Los pajaritos ya no cantan como antes cantaban</p>
+								<p class="information-left-subtitle">Por Sergio Gonzales</p>
+								<p class="information-left-title">ID: # 105-4353550-5844247</p>
+								<br>
 								<p class="information-left-description">
-									PRODUCTO: <br>
-									Los Pajaritos ya no cantan como antes <br>
-									Sergio Gonzales <br>
-									ID # OO.23232.2123 <br>
-									<br>
 									VENTA DE OBRA ORIGINAL <br>
-									Obra original empacada en caja <br>
-									<br>
-									FECHA PEDIDO: <br>
-									13/05/2016
+									Obra original empacada en caja
+									<br><br>
+									ORIGEN: <br>
+									Miraflores, LIma, Perú
 								</p>
 							</div>
 							<div class="information-center">
-								MEDIDAS DEL PAQUETE <br>
-								2.5 kg / 50 cm x 40 cm x 10 cm <br>
+								<p>
+									CANTIDAD: <br>
+									X 1
+								</p>
+								<br><br>
+								<p>
+									MEDIDAS DEL PAQUETE <br>
+									2.5 kg / 50 cm x 40 cm x 10 cm
+									<br><br>
+									DESTINO: <br>
+									Chiclayo, Chiclayo, Perú
+								</p>
 								<br>
-								Pagado con <strong>Paypal</strong> <br>
-								<br>
-								ORIGEN: <br>
-								Miraflores, LIma, Perú <br>
-								<br>
-								DESTINO: <br>
-								Chiclayo, Chiclayo, Perú
+								<p> <a href="#">Ficha de envío</a> </p>
 							</div>
 							<div class="information-right">
-								<p>RESUMEN DE LA ORDEN</p>
-								<div class="table type2">
+								<div class="table">
 									<div class="left">
-										<p>tu ganancia:</p>
+										<p class="green">tu ganancia:</p>
 										<p>comisión am</p>
-										<p>subtotal:</p>
+										<p class="bold">subtotal:</p>
 										<p>shipping:</p>
 										<p>impuestos:</p>
-										<p>total:</p>
+										<p class="bold">total:</p>
 									</div>
 									<div class="right">
-										<p>USD 70.00</p>
+										<p class="green">USD 70.00</p>
 										<p>USD 30.00</p>
-										<p>USD 100.00</p>
+										<p class="bold">USD 100.00</p>
 										<p>USD 25.00</p>
 										<p>USD 25.00</p>
-										<p>USD 150.00</p>
+										<p class="bold">USD 150.00</p>
 									</div>
 								</div>
 								<br>
-								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
 								<a href="">Detalle Invoice</a>
 							</div>
 						</div>
-
-						<p class="open-seller-secondary-title">Acción a realizar:</p>
 
 						<div class="open-seller-box">
 							<span class="number">4</span>
@@ -284,61 +282,60 @@
 
 						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
 
-						<div class="open-seller-item type2">
+						<div class="open-seller-item">
 							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
 							<div class="information-left">
+								<p class="information-left-title">Los pajaritos ya no cantan como antes cantaban</p>
+								<p class="information-left-subtitle">Por Sergio Gonzales</p>
+								<p class="information-left-title">ID: # 105-4353550-5844247</p>
+								<br>
 								<p class="information-left-description">
-									PRODUCTO: <br>
-									Los Pajaritos ya no cantan como antes <br>
-									Sergio Gonzales <br>
-									ID # OO.23232.2123 <br>
-									<br>
 									VENTA DE OBRA ORIGINAL <br>
-									Obra original empacada en caja <br>
-									<br>
-									FECHA PEDIDO: <br>
-									13/05/2016
+									Obra original empacada en caja
+									<br><br>
+									ORIGEN: <br>
+									Miraflores, LIma, Perú
 								</p>
 							</div>
 							<div class="information-center">
-								MEDIDAS DEL PAQUETE <br>
-								2.5 kg / 50 cm x 40 cm x 10 cm <br>
+								<p>
+									CANTIDAD: <br>
+									X 1
+								</p>
+								<br><br>
+								<p>
+									MEDIDAS DEL PAQUETE <br>
+									2.5 kg / 50 cm x 40 cm x 10 cm
+									<br><br>
+									DESTINO: <br>
+									Chiclayo, Chiclayo, Perú
+								</p>
 								<br>
-								Pagado con <strong>Paypal</strong> <br>
-								<br>
-								ORIGEN: <br>
-								Miraflores, LIma, Perú <br>
-								<br>
-								DESTINO: <br>
-								Chiclayo, Chiclayo, Perú
+								<p> <a href="#">Ficha de envío</a> </p>
 							</div>
 							<div class="information-right">
-								<p>RESUMEN DE LA ORDEN</p>
-								<div class="table type2">
+								<div class="table">
 									<div class="left">
-										<p>tu ganancia:</p>
+										<p class="green">tu ganancia:</p>
 										<p>comisión am</p>
-										<p>subtotal:</p>
+										<p class="bold">subtotal:</p>
 										<p>shipping:</p>
 										<p>impuestos:</p>
-										<p>total:</p>
+										<p class="bold">total:</p>
 									</div>
 									<div class="right">
-										<p>USD 70.00</p>
+										<p class="green">USD 70.00</p>
 										<p>USD 30.00</p>
-										<p>USD 100.00</p>
+										<p class="bold">USD 100.00</p>
 										<p>USD 25.00</p>
 										<p>USD 25.00</p>
-										<p>USD 150.00</p>
+										<p class="bold">USD 150.00</p>
 									</div>
 								</div>
 								<br>
-								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
 								<a href="">Detalle Invoice</a>
 							</div>
 						</div>
-						
-						<p class="open-seller-secondary-title">Acción a realizar:</p>
 
 						<div class="open-seller-box">
 							<span class="number check"><i class="fa fa-check"></i></span>
