--- a/app/views/user/account/seller-2.html
+++ b/app/views/user/account/seller-2.html
@@ -55,27 +55,24 @@
 								<p>RESUMEN DE LA ORDEN</p>
 								<div class="table type2">
 									<div class="left">
+										<p>tu ganancia:</p>
+										<p>comisión am</p>
 										<p>subtotal:</p>
 										<p>shipping:</p>
 										<p>impuestos:</p>
-										<p class="bold">total:</p>
+										<p>total:</p>
 									</div>
 									<div class="right">
+										<p>USD 70.00</p>
+										<p>USD 30.00</p>
 										<p>USD 100.00</p>
 										<p>USD 25.00</p>
 										<p>USD 25.00</p>
-										<p class="bold">USD 150.00</p>
+										<p>USD 150.00</p>
 									</div>
 								</div>
 								<br>
-								<p>STATUS ORDEN:</p>
-
-								<div class="table type2">
-									<div class="left">
-										<p class="green">1. En camino</p>
-									</div>
-								</div>
-								<br>
+								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
 								<a href="">Detalle Invoice</a>
 							</div>
 						</div>
@@ -84,7 +81,7 @@
 
 						<div class="open-seller-box">
 							<span class="number">1</span>
-							<p>¿Llego la obra de arte a tu hogar?</p>
+							<p>¿Tienes a la mano tu obra ó puedes conseguirla?</p>
 							<span class="icon"><i class="fa fa-info"></i></span>
 							<a href="#" class="seller-button small green">SI</a>
 							<a href="#" class="seller-button small red">NO</a>
@@ -124,27 +121,24 @@
 								<p>RESUMEN DE LA ORDEN</p>
 								<div class="table type2">
 									<div class="left">
+										<p>tu ganancia:</p>
+										<p>comisión am</p>
 										<p>subtotal:</p>
 										<p>shipping:</p>
 										<p>impuestos:</p>
-										<p class="bold">total:</p>
+										<p>total:</p>
 									</div>
 									<div class="right">
+										<p>USD 70.00</p>
+										<p>USD 30.00</p>
 										<p>USD 100.00</p>
 										<p>USD 25.00</p>
 										<p>USD 25.00</p>
-										<p class="bold">USD 150.00</p>
+										<p>USD 150.00</p>
 									</div>
 								</div>
 								<br>
-								<p>STATUS ORDEN:</p>
-
-								<div class="table type2">
-									<div class="left">
-										<p class="green">1. En camino</p>
-									</div>
-								</div>
-								<br>
+								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
 								<a href="">Detalle Invoice</a>
 							</div>
 						</div>
@@ -153,71 +147,9 @@
 
 						<div class="open-seller-box">
 							<span class="number">2</span>
-							<p>¿Llego la obra de arte a tu hogar?</p>
+							<p>Empaca bien tu arte y confirma, <a href="">mira nuestra guía de empaque</a></p>
 							<span class="icon"><i class="fa fa-info"></i></span>
-							<a href="#" class="seller-button small green">SI</a>
-							<a href="#" class="seller-button small red">NO</a>
-						</div>
-
-						<p class="open-seller-main-title u-margin-top-30">Historial de compras</p>
-
-						<p class="u-separator u-margin-bottom-20" style="background: #979797;"></p>
-
-						<div class="open-seller-item type2">
-							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
-							<div class="information-left">
-								<p class="information-left-description">
-									PRODUCTO: <br>
-									Los Pajaritos ya no cantan como antes <br>
-									Sergio Gonzales <br>
-									ID # OO.23232.2123 <br>
-									<br>
-									VENTA DE OBRA ORIGINAL <br>
-									Obra original empacada en caja <br>
-									<br>
-									FECHA PEDIDO: <br>
-									13/05/2016
-								</p>
-							</div>
-							<div class="information-center">
-								MEDIDAS DEL PAQUETE <br>
-								2.5 kg / 50 cm x 40 cm x 10 cm <br>
-								<br>
-								Pagado con <strong>Paypal</strong> <br>
-								<br>
-								ORIGEN: <br>
-								Miraflores, LIma, Perú <br>
-								<br>
-								DESTINO: <br>
-								Chiclayo, Chiclayo, Perú
-							</div>
-							<div class="information-right">
-								<p>RESUMEN DE LA ORDEN</p>
-								<div class="table type2">
-									<div class="left">
-										<p>subtotal:</p>
-										<p>shipping:</p>
-										<p>impuestos:</p>
-										<p class="bold">total:</p>
-									</div>
-									<div class="right">
-										<p>USD 100.00</p>
-										<p>USD 25.00</p>
-										<p>USD 25.00</p>
-										<p class="bold">USD 150.00</p>
-									</div>
-								</div>
-								<br>
-								<p>STATUS ORDEN:</p>
-
-								<div class="table type2">
-									<div class="left">
-										<p class="green">1. En camino</p>
-									</div>
-								</div>
-								<br>
-								<a href="">Detalle Invoice</a>
-							</div>
+							<a href="#" class="seller-button">LISTO</a>
 						</div>
 
 						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
@@ -254,29 +186,163 @@
 								<p>RESUMEN DE LA ORDEN</p>
 								<div class="table type2">
 									<div class="left">
+										<p>tu ganancia:</p>
+										<p>comisión am</p>
 										<p>subtotal:</p>
 										<p>shipping:</p>
 										<p>impuestos:</p>
-										<p class="bold">total:</p>
+										<p>total:</p>
 									</div>
 									<div class="right">
+										<p>USD 70.00</p>
+										<p>USD 30.00</p>
 										<p>USD 100.00</p>
 										<p>USD 25.00</p>
 										<p>USD 25.00</p>
-										<p class="bold">USD 150.00</p>
+										<p>USD 150.00</p>
 									</div>
 								</div>
 								<br>
-								<p>STATUS ORDEN:</p>
-
-								<div class="table type2">
-									<div class="left">
-										<p class="green">1. En camino</p>
-									</div>
-								</div>
-								<br>
+								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
 								<a href="">Detalle Invoice</a>
 							</div>
+						</div>
+
+						<p class="open-seller-secondary-title">Acción a realizar:</p>
+
+						<div class="open-seller-box">
+							<span class="number">3</span>
+							<p>Imprime la <a href="#">ficha de envío</a> y pégala al empaque</p>
+							<span class="icon"><i class="fa fa-info"></i></span>
+							<a href="#" class="seller-button">LISTO</a>
+						</div>
+
+						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
+
+						<div class="open-seller-item type2">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
+							<div class="information-left">
+								<p class="information-left-description">
+									PRODUCTO: <br>
+									Los Pajaritos ya no cantan como antes <br>
+									Sergio Gonzales <br>
+									ID # OO.23232.2123 <br>
+									<br>
+									VENTA DE OBRA ORIGINAL <br>
+									Obra original empacada en caja <br>
+									<br>
+									FECHA PEDIDO: <br>
+									13/05/2016
+								</p>
+							</div>
+							<div class="information-center">
+								MEDIDAS DEL PAQUETE <br>
+								2.5 kg / 50 cm x 40 cm x 10 cm <br>
+								<br>
+								Pagado con <strong>Paypal</strong> <br>
+								<br>
+								ORIGEN: <br>
+								Miraflores, LIma, Perú <br>
+								<br>
+								DESTINO: <br>
+								Chiclayo, Chiclayo, Perú
+							</div>
+							<div class="information-right">
+								<p>RESUMEN DE LA ORDEN</p>
+								<div class="table type2">
+									<div class="left">
+										<p>tu ganancia:</p>
+										<p>comisión am</p>
+										<p>subtotal:</p>
+										<p>shipping:</p>
+										<p>impuestos:</p>
+										<p>total:</p>
+									</div>
+									<div class="right">
+										<p>USD 70.00</p>
+										<p>USD 30.00</p>
+										<p>USD 100.00</p>
+										<p>USD 25.00</p>
+										<p>USD 25.00</p>
+										<p>USD 150.00</p>
+									</div>
+								</div>
+								<br>
+								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
+								<a href="">Detalle Invoice</a>
+							</div>
+						</div>
+
+						<p class="open-seller-secondary-title">Acción a realizar:</p>
+
+						<div class="open-seller-box">
+							<span class="number">4</span>
+							<p>Lleva el paquete al courrier, paga el envío(luego te lo devolvermos) y confirma</p>
+							<span class="icon"><i class="fa fa-info"></i></span>
+							<a href="#" class="seller-button">SUBIR VOUCHER</a>
+						</div>
+
+						<p class="u-separator u-margin-top-30 u-margin-bottom-20" style="background: #979797;"></p>
+
+						<div class="open-seller-item type2">
+							<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065543/general/admin-option-2.jpg">
+							<div class="information-left">
+								<p class="information-left-description">
+									PRODUCTO: <br>
+									Los Pajaritos ya no cantan como antes <br>
+									Sergio Gonzales <br>
+									ID # OO.23232.2123 <br>
+									<br>
+									VENTA DE OBRA ORIGINAL <br>
+									Obra original empacada en caja <br>
+									<br>
+									FECHA PEDIDO: <br>
+									13/05/2016
+								</p>
+							</div>
+							<div class="information-center">
+								MEDIDAS DEL PAQUETE <br>
+								2.5 kg / 50 cm x 40 cm x 10 cm <br>
+								<br>
+								Pagado con <strong>Paypal</strong> <br>
+								<br>
+								ORIGEN: <br>
+								Miraflores, LIma, Perú <br>
+								<br>
+								DESTINO: <br>
+								Chiclayo, Chiclayo, Perú
+							</div>
+							<div class="information-right">
+								<p>RESUMEN DE LA ORDEN</p>
+								<div class="table type2">
+									<div class="left">
+										<p>tu ganancia:</p>
+										<p>comisión am</p>
+										<p>subtotal:</p>
+										<p>shipping:</p>
+										<p>impuestos:</p>
+										<p>total:</p>
+									</div>
+									<div class="right">
+										<p>USD 70.00</p>
+										<p>USD 30.00</p>
+										<p>USD 100.00</p>
+										<p>USD 25.00</p>
+										<p>USD 25.00</p>
+										<p>USD 150.00</p>
+									</div>
+								</div>
+								<br>
+								<a href="" style="margin-bottom: 6px;">Ficha de envío</a>
+								<a href="">Detalle Invoice</a>
+							</div>
+						</div>
+						
+						<p class="open-seller-secondary-title">Acción a realizar:</p>
+
+						<div class="open-seller-box">
+							<span class="number check"><i class="fa fa-check"></i></span>
+							<p>Listo! La obra debe estar por llegar a su destino, te avisaremos cuando </p>
 						</div>
 
 					</form>
