--- a/app/views/user/collection/index.html
+++ b/app/views/user/collection/index.html
@@ -3,6 +3,22 @@
 
 {% extends '../../partials/base.html' %}
 
+{% block head %}
+	<meta property="og:site_name" content="Arte Manifiesto" />
+	<meta property="og:site" content="artemanifiesto.com" />
+	<meta property="og:title" content="{{collection.name}}" />
+	<meta property="og:description" content="{{collection.description}}" />
+	<meta property="og:image" content="{{works[1].photo|addFilter('w_1200,h_630,q_60,c_crop')}}" />
+	<meta property="og:url" content="http://artemanifiesto.com/user/{{collection.User.username}}/collection/{{collection.nameSlugify}}" />
+	<meta property="og:type" content="article" />
+	<meta name='twitter:card' content='summary_large_image' />
+	<meta name='twitter:image:src' content="{{works[1].photo|addFilter('w_1200,h_630,q_60,c_crop')}}" />
+	<meta name='twitter:site' content='@artemanifiesto' />
+	<meta name='twitter:url' content="http://artemanifiesto.com/user/{{collection.User.username}}/collection/{{collection.nameSlugify}}" />
+	<meta name='twitter:description' content='{{collection.description}}' />
+	<meta name='twitter:title' content='{{collection.name}}' />
+{% endblock %}
+
 {% block elements %}
 
 	<div class="grid-container u-padding-top-40 u-padding-bottom-20" style="position: relative;">
