--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -3107,6 +3107,17 @@ white = #fff
 			font-family: 'PT Serif', serif;
 			font-size 12px
 			color #838c8e
+		
+		.type2
+			display flex
+			justify-content space-between
+			align-items center
+			.price
+				font-size 10px
+				strong
+					font-size 14px
+			select
+				padding 5px
 
 
 /*------------------------------------*
