--- a/app/styles/filters.styl
+++ b/app/styles/filters.styl
@@ -69,6 +69,7 @@ l/*------------------------------------*
 		padding 20px
 		li
 		a
+			display block
 			font-family 'Montserrat', sans-serif
 			font-size 12.4px
 			cursor pointer
