add zoom to product card

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1061,10 +1061,14 @@ white = #fff
 	$ PRODUCT CARD
 *------------------------------------*/
 .product-card
-	border solid 1px #ddd
+	// border solid 1px #ddd
 	position relative
 	max-width: 250px;
 	margin: auto;
+	padding 20px
+	&:hover
+		.product-card-zoom
+			display block
 	&.type2
 		border none
 	&-image
@@ -1103,14 +1107,26 @@ white = #fff
 				font-size 1.25em
 	&-price
 		position absolute
-		right 0
-		bottom 0
+		// right 0
+		// bottom 0
+		right: 10px;
+		bottom: 10px;
 		background rgba(white, .9)
 		font-family 'Montserrat', sans-serif
 		color #1e1f1e
 		font-size 12px
 		padding 10px
 		border-radius 2px
+	&-zoom
+		position absolute
+		height 100%
+		width 100%
+		top 0
+		left 0
+		background rgba(red, .5)
+		display none
+		background-size cover
+		background-position center center
 .featured
 	z-index: 1;
 	position absolute
