add new landing market

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -205,6 +205,11 @@ white = #fff
 				flex-direction: column;
 				.title
 					text-shadow: 0 2px 4px rgba(black, .5);
+			&.type2
+				flex-direction: column;
+				justify-content: center;
+				.subtitle
+					margin initial
 		.title
 			text-align center
 			// font-size 48px
@@ -5452,3 +5457,18 @@ white = #fff
 
 #back-to-top.show
 	opacity: 1;
+
+.market-sub-menu
+	display flex
+	justify-content center
+	a
+		font-family: 'Montserrat',sans-serif;
+		color charcoal-grey
+		font-size 14px
+		padding 30px 25px
+
+.market-grid
+	&-element
+		background #d8d8d8
+		margin 10px 0
+		height 300px
