add contact page

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5472,3 +5472,98 @@ white = #fff
 		background #d8d8d8
 		margin 10px 0
 		height 300px
+
+.contact-form-inner
+	display flex
+	flex-direction column
+	align-items center
+		 
+.contact-form
+	background charcoal-grey
+	.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		color white
+		font-size 52px
+		max-width 720px
+		margin-top 100px
+		text-align center
+	.subtitle
+		font-family: 'PT Serif', serif;
+		font-size 20px
+		color rgba(white, .7)
+		max-width 425px
+		padding-top 20px
+		line-height 1.15
+		text-align center
+	form
+		display flex
+		flex-direction column
+		margin 30px 0
+		width: 100%;
+		max-width: 624px;
+		input
+		textarea
+			color white
+			background rgba(white, .15)
+			border-radius 4px
+			margin 5px 0
+			padding 10px 15px
+		textarea
+			min-height 153px
+		
+		button
+			font-family: 'Montserrat',sans-serif;
+			font-weight bold
+			font-size 10px
+			color white
+			background #276cf2
+			border-radius 40px
+			padding 15px 20px
+			cursor pointer
+			letter-spacing 2px
+			max-width 150px
+			display table
+			margin 20px auto
+
+.contact-map-inner
+	position relative
+	text-align center
+	padding 115px 0
+.contact-map
+	background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458424126/general/Mapa.png');
+	background-size cover
+	background-position center center
+	position relative
+	.cover
+		position absolute
+		height 100%
+		width 100%
+		// background rgba(#2e71f0, .95)
+		background 	#2e71f0
+		opacity .8
+	.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		font-size 52px
+		color white
+		padding-bottom 20px
+	.subtitle
+		font-family: 'PT Serif', serif;
+		color rgba(white, .69)
+		font-size 25px
+		margin-bottom 8px
+		line-height 1.15
+	.socials
+		margin-top 30px
+		a
+			display inline-flex
+			align-items center
+			justify-content center
+			color rgba(white, .7)
+			border-radius 50%
+			border solid 1px rgba(white, .5)
+			height 48px
+			width 48px
+			min-width 48px
+			margin 5px
