--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -8,104 +8,45 @@
 	<!-- ********************************************************************
 		$ SLIDER
 	********************************************************************* -->
-	<div class="grid-container u-margin-top-20">
-		<div class="grid-100">
-			<section class="slider">
-				<div class="slider-items">
-					<a href="/compra-y-vende-arte-en-internet-latinoamerica">
-					<div class="slider-item js-slide" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065553/general/home-slider-1.jpg')">
-						<div class="slider-item-inner type2">
-							<p class="title">Tentacles Abound in Our Best Jellyfish Pictures</p>
-							<br>
-							<p class="subtitle u-padding-top-10">James Gurney picks the most interesting pieces from the luxury watch fair</p>
-						</div>
-					</div>
-					<a href="https://kuestionario.typeform.com/to/VNsGbl">
-					<div class="slider-item js-slide" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1450065551/general/home-slider-2.jpg')">
-						<div class="slider-item-inner">
-							<p class="title">Participa y gana una exposicion en Casa Pausa</p>
-						</div>
-					</div>
-				</a>
-				</div>
-				<div class="slider-nav">
-					<i class="slider-nav-item js-slideNavItem active fa fa-circle"></i>
-					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
-					<!-- <i class="slider-nav-item js-slideNavItem fa fa-circle"></i> -->
-				</div>
-			</section>
-		</div>
-	</div>
-
-	<!-- ********************************************************************
-		$ MARKET MENU
-	********************************************************************* -->
-	<div class="grid-container">
-		<div class="grid-100">
-			<div class="market-sub-menu">
-				<a href="#">TODO</a>
-				<a href="#">ARTE ORIGINAL</a>
-				<a href="#">PRINTS</a>
-				<a href="#">TAZAS</a>
-				<a href="#">PHONE CASES</a>
-				<a href="#">TABLET CASES</a>
-				<a href="#">ALMOHADAS</a>
-			</div>
-		</div>
-	</div>
-
-	<!-- ********************************************************************
-		$ MARKET GRID
-	********************************************************************* -->
-	<div class="market-grid">
-		<div class="grid-container">
-			<div class="grid-70">
-				<div class="market-grid-element"></div>
-			</div>
-			<div class="grid-30">
-				<div class="market-grid-element"></div>
-			</div>
-		</div>
-	</div>
-	<div class="market-grid">
-		<div class="grid-container">
-			<div class="grid-30">
-				<div class="market-grid-element"></div>
-			</div>
-			<div class="grid-70">
-				<div class="market-grid-element"></div>
-			</div>
-		</div>
-	</div>
-	<div class="market-grid">
+	
+	<div class="contact-form">
 		<div class="grid-container">
 			<div class="grid-100">
-				<div class="market-grid-element"></div>
+				<div class="contact-form-inner">
+					<p class="title">Nos encantaría conversar contigo</p>
+					<p class="subtitle">Escríbenos y cuéntanos lo que podemos hacer por tí, una buena charla, sugerencias o un café siempre son bienvenidos</p>
+
+					<form>
+						<input type="text" placeholder="E-Mail"></input>
+						<textarea>Your message</textarea>
+						<button>SEND MESSAGE</button>
+					</form>
+				</div>
 			</div>
 		</div>
 	</div>
-	<div class="market-grid">
+
+	<div class="contact-map">
+		<div class="cover"></div>
 		<div class="grid-container">
-			<div class="grid-33">
-				<div class="market-grid-element"></div>
-			</div>
-			<div class="grid-33">
-				<div class="market-grid-element"></div>
-			</div>
-			<div class="grid-33">
-				<div class="market-grid-element"></div>
+			<div class="grid-100">
+				<div class="contact-map-inner">
+					<p class="title">O mejor aún, visítanos</p>
+					<p class="subtitle">Lizardo Montero 460 Int 304 <br> Miraflores, Lima, Perú</p>
+					<p class="subtitle">+51 944-426-766</p>
+					<p class="subtitle">contacto@artemanifiesto.com</p>
+					<div class="socials">
+						<a href="#"><i class="fa fa-facebook"></i></a>
+						<a href="#"><i class="fa fa-twitter"></i></a>
+						<a href="#"><i class="fa fa-instagram"></i></a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
+
 
 {% endblock %}
 
 {% block scripts %}
-	<script>
-	var users = {{users|json|safe}};
-	var works = {{works|json|safe}};
-		$(function() {
-			new APP.HomeScreen();
-		});
-	</script>
 {% endblock %}
