add background in original work creator

--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -475,13 +475,18 @@
 	<div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
-				<div class="sales-left">
+				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458849903/general/fondo_prints_galeri%CC%81a.png');">
+					<div class="controls">
+						<i class="fa fa-check-square-o"></i>
+						<i class="selected fa fa-check-square-o"></i>
+					</div>
 					<div class="sales-image-card">
+						<div class="original-work"><i class="fa fa-cog"></i>&nbsp;OBRA ORIGINAL</div>
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
-						<div class="content">
+						<!-- <div class="content">
 							<a href="#" class="title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</a>
 							<a href="#" class="author">Sergio Gonzales Mucho</a>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<div class="sales-right">
