--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -5130,6 +5130,8 @@ white = #fff
 .sales-image-card
 	max-width 220px
 	margin auto
+	background white
+	position relative
 	.content
 		border solid 1px #ddd
 		padding 10px
@@ -5148,6 +5150,22 @@ white = #fff
 		font-size 12px
 		color #838c8c
 		font-style italic
+	.original-work
+		display: flex;
+		align-items: center;
+		font-size 10px
+		font-family: 'Montserrat', sans-serif;
+		font-weight bold
+		color #cbb400
+		background #f8f197
+		border-radius 3px
+		padding: 3px 8px;
+		position absolute
+		top 10px
+		left -10px
+		box-shadow 0 1px 1px 0 rgba(black, .5)
+		i
+			font-size: 1.25em;
 
 .sales-title
 	font-family: 'Montserrat', sans-serif;
@@ -5193,6 +5211,19 @@ white = #fff
 	&-left
 		flex 2
 		display flex
+		background-size: cover;
+		background-position: center center;
+		position relative
+		
+		.controls
+			position absolute
+			right 0
+			background white
+			i
+				display block
+				padding 20px 15px
+				&.selected
+					border-left: solid 3px #0000ff;
 
 	&-right
 		flex 1
