--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -83,18 +83,17 @@
 	<div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
-				<div class="sales-left">
+				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458849903/general/fondo_prints_galeri%CC%81a.png');">
+					<div class="controls">
+						<i class="selected fa fa-check-square-o"></i>
+						<i class="fa fa-check-square-o"></i>
+					</div>
 					<div class="sales-image-card">
+						<div class="original-work"><i class="fa fa-cog"></i>&nbsp;OBRA ORIGINAL</div>
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
-						<div class="content">
-							<a href="#" class="title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</a>
-							<a href="#" class="author">Sergio Gonzales Mucho</a>
-						</div>
 					</div>
 				</div>
 				<div class="sales-right">
-
-					<!-- <a class="sales-button white">REEMPLAZAR IMAGEN</a> -->
 					<p class="title u-margin-top-10" style="text-align: center;">DETALLES ENVÍO</p>
 					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
 
@@ -137,13 +136,13 @@
 	<div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
-				<div class="sales-left">
-					<div class="sales-image-card">
+				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458855146/general/fondo_prints_2.png');">
+					<div class="controls">
+						<i class="fa fa-check-square-o"></i>
+						<i class="selected fa fa-check-square-o"></i>
+					</div>
+					<div class="sales-image-card white-mark">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
-						<div class="content">
-							<a href="#" class="title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</a>
-							<a href="#" class="author">Sergio Gonzales Mucho</a>
-						</div>
 					</div>
 				</div>
 				<div class="sales-right">
@@ -156,10 +155,10 @@
 						AM te cobra por la fabricación del producto, no por la venta. Sugerimos que tu margen sea +20%, pero puedes incrementarlo si conoces tu mercado.
 					</p>
 					
-					<table class="prints u-margin-top-20 u-margin-bottom-40" style="display: inline-block;">
+					<table class="prints u-margin-top-20 u-margin-bottom-40" style="width: 100%;">
 						<tr>
 							<td><p class="title">TIPO DE PRINT</p></td>
-							<td><p class="title">MARGEN</p></td>
+							<td><p class="title">&nbsp;&nbsp;MARGEN</p></td>
 						</tr>
 						<tr>
 							<td>
@@ -258,12 +257,12 @@
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left">
+					<div class="controls">
+						<i class="selected fa fa-check-square-o"></i>
+						<i class="fa fa-check-square-o"></i>
+					</div>
 					<div class="sales-image-card">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
-						<div class="content">
-							<a href="#" class="title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</a>
-							<a href="#" class="author">Sergio Gonzales Mucho</a>
-						</div>
 					</div>
 				</div>
 				<div class="sales-right">
@@ -276,10 +275,10 @@
 						AM te cobra por la fabricación del producto, no por la venta. Sugerimos que tu margen sea +20%, pero puedes incrementarlo si conoces tu mercado.
 					</p>
 					
-					<table class="prints u-margin-top-20 u-margin-bottom-40" style="display: inline-block;">
+					<table class="prints u-margin-top-20 u-margin-bottom-40" style="width: 100%;">
 						<tr>
 							<td><p class="title">TIPO DE PRINT</p></td>
-							<td><p class="title">MARGEN</p></td>
+							<td><p class="title">&nbsp;&nbsp;MARGEN</p></td>
 						</tr>
 						<tr>
 							<td>
@@ -358,13 +357,13 @@
 	<div class="grid-container">
 		<div class="grid-100">
 			<div class="sales">
-				<div class="sales-left">
-					<div class="sales-image-card">
+				<div class="sales-left" style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/v1458855146/general/fondo_prints_2.png');">
+					<div class="controls">
+						<i class="selected fa fa-check-square-o"></i>
+						<i class="fa fa-check-square-o"></i>
+					</div>
+					<div class="sales-image-card white-mark">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
-						<div class="content">
-							<a href="#" class="title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</a>
-							<a href="#" class="author">Sergio Gonzales Mucho</a>
-						</div>
 					</div>
 				</div>
 				<div class="sales-right">
@@ -412,12 +411,12 @@
 		<div class="grid-100">
 			<div class="sales">
 				<div class="sales-left">
+					<div class="controls">
+						<i class="selected fa fa-check-square-o"></i>
+						<i class="fa fa-check-square-o"></i>
+					</div>
 					<div class="sales-image-card">
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
-						<div class="content">
-							<a href="#" class="title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</a>
-							<a href="#" class="author">Sergio Gonzales Mucho</a>
-						</div>
 					</div>
 				</div>
 				<div class="sales-right">
@@ -483,10 +482,6 @@
 					<div class="sales-image-card">
 						<div class="original-work"><i class="fa fa-cog"></i>&nbsp;OBRA ORIGINAL</div>
 						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
-						<!-- <div class="content">
-							<a href="#" class="title">OUR LEGACY SPLASH MID SLEEVE AND I WILL NOT SLEEP</a>
-							<a href="#" class="author">Sergio Gonzales Mucho</a>
-						</div> -->
 					</div>
 				</div>
 				<div class="sales-right">
@@ -545,6 +540,380 @@
 					<p class="subtitle-mall">* El precio de lista no incluye impuestos en cada país, ni el costo de envío.</p>
 
 					<a class="sales-button u-margin-top-30 u-margin-bottom-10">APLICAR CAMBIOS</a>
+
+					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- PHONE CASES: EDICIÓN -->
+	<div class="grid-container">
+		<div class="grid-100">
+			<div class="sales">
+				<div class="sales-left">
+					<div class="controls">
+						<i class="selected fa fa-check-square-o"></i>
+						<i class="fa fa-check-square-o"></i>
+					</div>
+					<div class="sales-image-card">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+					</div>
+				</div>
+				<div class="sales-right">
+
+					<p class="title u-margin-top-10" style="text-align: center;">PHONE CASES: EDICIÓN</p>
+					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
+
+					<p class="title">Crea cases con solo un click</p>
+					<p class="subtitle">
+						Acomoda la imagen de tu obra sobre el case. Para un resultado óptimo crea una imagen de 1187x1852 píxeles que se acomode al formato.
+					</p>
+
+					<a href="" class="sales-button white">REEMPLAZAR IMAGEN</a>
+
+					<div class="back-color">
+						<p class="subtitle">Estilo:</p>
+						<select>
+							<option>Iphone 6 case</option>
+							<option>Iphone 6 case</option>
+							<option>Iphone 6 case</option>
+						</select>
+					</div>
+
+					<div class="back-color">
+						<p class="subtitle">Color de fondo:</p>
+						<select>
+							<option></option>
+							<option></option>
+							<option></option>
+						</select>
+					</div>
+
+					<p class="subtitle u-margin-top-30" style="margin-bottom: 0;">Tamaño obra en el producto:</p>
+
+					<div class="size-work">
+						<input type="range" name="" min="0" max="10">
+						<p>50%</p>
+					</div>
+
+					<p class="subtitle u-margin-top-20" style="margin-bottom: 0;">Centrar diseño:</p>
+					
+					<div class="aligns" style="margin-bottom: 0;">
+						<a href="" class="sales-button white">VERTICAL</a>
+						<a href="" class="sales-button white">HORIZONTAL</a>
+					</div>
+
+					<a class="sales-button u-margin-top-30 u-margin-bottom-10">GUARDAR CAMBIOS</a>
+
+					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- PHONE CASES: CONDICIONES -->
+	<div class="grid-container">
+		<div class="grid-100">
+			<div class="sales">
+				<div class="sales-left">
+					<div class="controls">
+						<i class="selected fa fa-check-square-o"></i>
+						<i class="fa fa-check-square-o"></i>
+					</div>
+					<div class="sales-image-card">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+					</div>
+				</div>
+				<div class="sales-right">
+
+					<p class="title u-margin-top-10" style="text-align: center;">PHONE CASES: CONDICIONES</p>
+					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
+
+					<p class="title">Condiciones</p>
+					<p class="subtitle">
+						AM te cobra por la fabricación del producto, no por la venta. Sugerimos que tu margen sea +20%, pero puedes incrementarlo si conoces tu mercado.
+					</p>
+					
+					<table class="prints u-margin-top-20 u-margin-bottom-40" style="width: 100%;">
+						<tr>
+							<td><p class="title">TIPO DE PRINT</p></td>
+							<td><p class="title">&nbsp;&nbsp;MARGEN</p></td>
+						</tr>
+						<tr>
+							<td>
+								<div class="type">
+									<input type="checkbox"></input>
+									<div>
+										<p>IPHONE CASE</p>
+										<p>$10.23 - $24.32</p>
+									</div>
+								</div>
+							</td>
+							<td>
+								<div class="data">
+									<input type="text"></input>
+									<div>
+										<p>PARA TÍ</p>
+										<p>$10.23 - $24.32</p>
+									</div>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<div class="type">
+									<input type="checkbox"></input>
+									<div>
+										<p>GALAXY CASE</p>
+										<p>$10.23 - $24.32</p>
+									</div>
+								</div>
+							</td>
+							<td>
+								<div class="data">
+									<input type="text"></input>
+									<div>
+										<p>PARA TÍ</p>
+										<p>$10.23 - $24.32</p>
+									</div>
+								</div>
+							</td>
+						</tr>
+					</table>
+
+					<p class="subtitle-mall u-margin-top-50">* El precio de lista no incluye impuestos en cada país, ni el costo de envío.</p>
+
+					<a class="sales-button u-margin-top-30 u-margin-bottom-10">GUARDAR CAMBIOS</a>
+
+					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- TABLET CASE: EDICIÓN -->
+	<div class="grid-container">
+		<div class="grid-100">
+			<div class="sales">
+				<div class="sales-left">
+					<div class="controls">
+						<i class="selected fa fa-check-square-o"></i>
+						<i class="fa fa-check-square-o"></i>
+					</div>
+					<div class="sales-image-card">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+					</div>
+				</div>
+				<div class="sales-right">
+
+					<p class="title u-margin-top-10" style="text-align: center;">TABLET CASE: EDICIÓN</p>
+					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
+
+					<p class="title">Crea cases con solo un click</p>
+					<p class="subtitle">
+						Acomoda la imagen de tu obra sobre el case. Para un resultado óptimo crea una imagen de 1187x1852 píxeles que se acomode al formato.
+					</p>
+
+					<a href="" class="sales-button white">REEMPLAZAR IMAGEN</a>
+
+					<div class="back-color">
+						<p class="subtitle">Color de fondo:</p>
+						<select>
+							<option></option>
+							<option></option>
+							<option></option>
+						</select>
+					</div>
+
+					<p class="subtitle u-margin-top-30" style="margin-bottom: 0;">Tamaño obra en el producto:</p>
+
+					<div class="size-work">
+						<input type="range" name="" min="0" max="10">
+						<p>50%</p>
+					</div>
+
+					<p class="subtitle u-margin-top-20" style="margin-bottom: 0;">Centrar diseño:</p>
+					
+					<div class="aligns" style="margin-bottom: 0;">
+						<a href="" class="sales-button white">VERTICAL</a>
+						<a href="" class="sales-button white">HORIZONTAL</a>
+					</div>
+
+					<a class="sales-button u-margin-top-30 u-margin-bottom-10">GUARDAR CAMBIOS</a>
+
+					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- TABLET CASE: CONDICIONES -->
+	<div class="grid-container">
+		<div class="grid-100">
+			<div class="sales">
+				<div class="sales-left">
+					<div class="controls">
+						<i class="fa fa-check-square-o"></i>
+						<i class="selected fa fa-check-square-o"></i>
+					</div>
+					<div class="sales-image-card">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+					</div>
+				</div>
+				<div class="sales-right">
+
+					<p class="title u-margin-top-10" style="text-align: center;">TABLET CASE: CONDICIONES</p>
+					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
+
+					<p class="title">Condiciones</p>
+					<p class="subtitle">
+						AM te cobra por la fabricación del producto, no por la venta. Sugerimos que tu margen sea +20%, pero puedes incrementarlo si conoces tu mercado.
+					</p>
+					
+					<table class="prints u-margin-top-20 u-margin-bottom-40" style="width: 100%;">
+						<tr>
+							<td><p class="title">TIPO DE CASE</p></td>
+							<td><p class="title">&nbsp;&nbsp;MARGEN</p></td>
+						</tr>
+						<tr>
+							<td>
+								<div class="type">
+									<input type="checkbox"></input>
+									<div>
+										<p>IPAD CASE</p>
+										<p>$10.23 - $24.32</p>
+									</div>
+								</div>
+							</td>
+							<td>
+								<div class="data">
+									<input type="text"></input>
+									<div>
+										<p>PARA TÍ</p>
+										<p>$10.23 - $24.32</p>
+									</div>
+								</div>
+							</td>
+						</tr>
+					</table>
+
+					<p class="subtitle-mall u-margin-top-50">* El precio de lista no incluye impuestos en cada país, ni el costo de envío.</p>
+
+					<a class="sales-button u-margin-top-30 u-margin-bottom-10">GUARDAR CAMBIOS</a>
+
+					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- ALMOHADAS: EDICIÓN -->
+	<div class="grid-container">
+		<div class="grid-100">
+			<div class="sales">
+				<div class="sales-left">
+					<div class="controls">
+						<i class="selected fa fa-check-square-o"></i>
+						<i class="fa fa-check-square-o"></i>
+					</div>
+					<div class="sales-image-card">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+					</div>
+				</div>
+				<div class="sales-right">
+
+					<p class="title u-margin-top-10" style="text-align: center;">ALMOHADAS: EDICIÓN</p>
+					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
+
+					<p class="title">Crea cases con solo un click</p>
+					<p class="subtitle">
+						Acomoda la imagen de tu obra sobre el case. Para un resultado óptimo crea una imagen de 1187x1852 píxeles que se acomode al formato.
+					</p>
+
+					<a href="" class="sales-button white">REEMPLAZAR IMAGEN</a>
+
+					<div class="back-color">
+						<p class="subtitle">Color de fondo:</p>
+						<select>
+							<option></option>
+							<option></option>
+							<option></option>
+						</select>
+					</div>
+
+					<p class="subtitle u-margin-top-30" style="margin-bottom: 0;">Tamaño obra en el producto:</p>
+
+					<div class="size-work">
+						<input type="range" name="" min="0" max="10">
+						<p>50%</p>
+					</div>
+
+					<p class="subtitle u-margin-top-20" style="margin-bottom: 0;">Centrar diseño:</p>
+					
+					<div class="aligns" style="margin-bottom: 0;">
+						<a href="" class="sales-button white">VERTICAL</a>
+						<a href="" class="sales-button white">HORIZONTAL</a>
+					</div>
+
+					<a class="sales-button u-margin-top-30 u-margin-bottom-10">GUARDAR CAMBIOS</a>
+
+					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- ALMOHADAS: CONDICIONES -->
+	<div class="grid-container">
+		<div class="grid-100">
+			<div class="sales">
+				<div class="sales-left">
+					<div class="controls">
+						<i class="fa fa-check-square-o"></i>
+						<i class="selected fa fa-check-square-o"></i>
+					</div>
+					<div class="sales-image-card">
+						<img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_700,h_800,q_80,c_limit/v1454928729/chlvcbesfnspyczfictg.png">
+					</div>
+				</div>
+				<div class="sales-right">
+
+					<p class="title u-margin-top-10" style="text-align: center;">ALMOHADAS: CONDICIONES</p>
+					<div class="u-separator u-margin-top-10 u-margin-bottom-25"></div>
+
+					<p class="title">Condiciones</p>
+					<p class="subtitle">
+						AM te cobra por la fabricación del producto, no por la venta. Sugerimos que tu margen sea +20%, pero puedes incrementarlo si conoces tu mercado.
+					</p>
+					
+					<table class="prints u-margin-top-20 u-margin-bottom-40" style="width: 100%;">
+						<tr>
+							<td><p class="title">TIPO DE CASE</p></td>
+							<td><p class="title">&nbsp;&nbsp;MARGEN</p></td>
+						</tr>
+						<tr>
+							<td>
+								<div class="type">
+									<input type="checkbox"></input>
+									<div>
+										<p>ALMOHADA</p>
+										<p>$10.23 - $24.32</p>
+									</div>
+								</div>
+							</td>
+							<td>
+								<div class="data">
+									<input type="text"></input>
+									<div>
+										<p>PARA TÍ</p>
+										<p>$10.23 - $24.32</p>
+									</div>
+								</div>
+							</td>
+						</tr>
+					</table>
+
+					<p class="subtitle-mall u-margin-top-50">* El precio de lista no incluye impuestos en cada país, ni el costo de envío.</p>
+
+					<a class="sales-button u-margin-top-30 u-margin-bottom-10">GUARDAR CAMBIOS</a>
 
 					<a class="help-button u-margin-top-10 u-margin-bottom-10">Necesitas ayuda?</a>
 				</div>
