--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2175,6 +2175,39 @@ white = #fff
 	box-sizing border-box
 	padding-top 30px
 	padding-bottom 30px
+	
+	.invitation-cover
+		height 300px
+		margin-bottom 40px
+
+	.invitation-title
+		font-family 'Montserrat', sans-serif
+		font-weight bold
+		font-size 24px
+		color #0c0c0c
+		text-align center
+	
+	.invitation-subTitle
+		font-family 'Montserrat', sans-serif
+		font-size 18px
+		color #000
+		text-align center
+		max-width 500px
+		margin 20px auto
+		&.underline
+			text-decoration underline
+			
+	.invitation-button
+		font-family 'Montserrat', sans-serif
+		font-weight bold
+		font-size 18px
+		color white
+		background #3bd64a
+		border-radius 4px
+		padding 20px 40px
+		display table
+		margin 30px auto
+		
 
 	.separator
 		font-family 'Montserrat', sans-serif
